finished the basic layout

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>You might be wondering why this recipe calls for a cup of boiling water. It intensifies the chocolatey flavour, contributes to the fluffy texture, and reacts with the learners to create an even higher rise.
         </p>
     </ul>
-    <h3>amount of ingredients</h3>
+    <h2>amount of ingredients</h2>
     <ul>
         <h3>Cake</h3>
         <p></p>
@@ -61,5 +61,29 @@
         <li>⅔cup milk</li>
         <li>1 teaspoon vanilla extract</li>
     </ul>
+    <h2>Directions</h2>
+    <ol>
+        <li>Preheat the oven to 350 degrees F (175 degrees C). Grease and flour two 9-inch round cake pans.</li>
+        <li>Make cake: Stir together sugar, flour, cocoa, baking soda, baking powder, and salt in a bowl.</li>
+        <img src="../img/cake 1.jpg" alt="">
+        <li>Add eggs, milk, oil, and vanilla; mix for 3 minutes with an electric mixer. Stir in boiling water by hand.</li>
+        <img src="../img/cake 2.jpg" alt="">
+        <img src="../img/cake 3.jpg" alt="">
+        <li>Pour evenly into the prepared pans.</li>
+        <img src="../img/cake 4.jpg" alt="">
+        <li>Bake in the preheated oven until a toothpick inserted into the centers comes out clean, 30 to 35 minutes. Cool for 10 minutes before removing from pans to cool completely.</li>
+        <img src="../img/cake 5.jpg" alt="">
+        <li>While cakes cool, make frosting: Cream butter with an electric mixer until light and fluffy. Stir in confectioners' sugar and cocoa alternately with milk and vanilla. Beat to a smooth spreading consistency.</li>
+        <img src="../img/cake 6.jpg" alt="">
+        <li>Split the layers of the cooled cake horizontally, cover the top of each layer with frosting, then stack them onto a serving plate.</li>
+        <img src="../img/cake 7.jpg" alt="">
+        <img src="../img/cake 8.jpg" alt="">
+        <li>Frost the outside of the cake with remaining frosting.</li>
+        <img src="../img/cake 9.jpg" alt="">
+        <!--use headings to make it look better-->
+        <li>Enjoy!</li>
+        <!--Make sure to space the images form the text-->
+        <img src="../img/cake 10.jpg" alt="">
+    </ol>
 </body>
 </html>
