moving img folder for easier access

--- a/index.html
+++ b/index.html
@@ -61,29 +61,55 @@
         <li>⅔cup milk</li>
         <li>1 teaspoon vanilla extract</li>
     </ul>
+    <!--start of directions to making the cake-->
     <h2>Directions</h2>
-    <ol>
-        <li>Preheat the oven to 350 degrees F (175 degrees C). Grease and flour two 9-inch round cake pans.</li>
-        <li>Make cake: Stir together sugar, flour, cocoa, baking soda, baking powder, and salt in a bowl.</li>
-        <img src="../img/cake 1.jpg" alt="">
-        <li>Add eggs, milk, oil, and vanilla; mix for 3 minutes with an electric mixer. Stir in boiling water by hand.</li>
-        <img src="../img/cake 2.jpg" alt="">
-        <img src="../img/cake 3.jpg" alt="">
-        <li>Pour evenly into the prepared pans.</li>
-        <img src="../img/cake 4.jpg" alt="">
-        <li>Bake in the preheated oven until a toothpick inserted into the centers comes out clean, 30 to 35 minutes. Cool for 10 minutes before removing from pans to cool completely.</li>
-        <img src="../img/cake 5.jpg" alt="">
-        <li>While cakes cool, make frosting: Cream butter with an electric mixer until light and fluffy. Stir in confectioners' sugar and cocoa alternately with milk and vanilla. Beat to a smooth spreading consistency.</li>
-        <img src="../img/cake 6.jpg" alt="">
-        <li>Split the layers of the cooled cake horizontally, cover the top of each layer with frosting, then stack them onto a serving plate.</li>
-        <img src="../img/cake 7.jpg" alt="">
-        <img src="../img/cake 8.jpg" alt="">
-        <li>Frost the outside of the cake with remaining frosting.</li>
-        <img src="../img/cake 9.jpg" alt="">
-        <!--use headings to make it look better-->
-        <li>Enjoy!</li>
-        <!--Make sure to space the images form the text-->
-        <img src="../img/cake 10.jpg" alt="">
-    </ol>
+    <!--useing the unordered list function to space the step number and the directions for readability-->
+    <ul>
+        <h3>step 1</h3>
+    </ul>
+    <p>Preheat the oven to 350 degrees F (175 degrees C). Grease and flour two 9-inch round cake pans.</p>
+    <ul>
+        <h3>step 2</h3>
+    </ul>
+    <p>Make cake: Stir together sugar, flour, cocoa, baking soda, baking powder, and salt in a bowl.</p>
+    <img src="" alt="">
+    <ul>
+        <h3>step 3</h3>
+    </ul>
+    <p>Add eggs, milk, oil, and vanilla; mix for 3 minutes with an electric mixer. Stir in boiling water by hand.</p>
+    <img src="" alt="">
+    <img src="" alt="">
+    <ul>
+        <h3>step 4</h3>
+    </ul>
+    <p>Pour evenly into the prepared pans.</p>
+    <img src="" alt="">
+    <ul>
+        <h3>step 5</h3>
+    </ul>
+    <p>Bake in the preheated oven until a toothpick inserted into the centres comes out clean, 30 to 35 minutes. Cool for 10 minutes before removing from pans to cool completely.</p>
+    <img src="" alt="">
+    <ul>
+        <h3>step 6</h3>
+    </ul>
+    <p>While cakes cool, make frosting: Cream butter with an electric mixer until light and fluffy. Stir in confectioners' sugar and cocoa alternately with milk and vanilla. Beat to a smooth spreading consistency.</p>
+    <img src="" alt="">
+    <ul>
+        <h3>step 7</h3>
+    </ul>
+    <p>Split the layers of the cooled cake horizontally, cover the top of each layer with frosting, then stack them onto a serving plate.</p>
+    <img src="" alt="">
+    <img src="" alt="">
+    <ul>
+        <h3>step 8</h3>
+    </ul>
+    <p>Frost the outside of the cake with the remaining frosting.</p>
+    <img src="" alt="">
+    <ul>
+        <h3>step 9</h3>
+    </ul>
+    <p>Enjoy!</p>
+    <img src="" alt="">
+
 </body>
 </html>
