--- a/index.html
+++ b/index.html
@@ -9,83 +9,6 @@
     <h1>odin recipes</h1>
     <a href="recipes/chocolate cake.html">chocolate cake</a>
     <p></p>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9441813.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="chocolate cake">
-    <h3>description</h3>
-    <p>Chocolate cake is a moist and tender dessert made with cocoa powder, known for its rich and indulgent flavors. Layered with a luscious chocolate frosting, it creates a heavenly treat that satisfies any chocolate lover's cravings. Whether enjoyed alone or with a scoop of ice cream, chocolate cake is a timeless classic that brings joy and delight to any occasion.</p>
-    <h2>ingredients</h2>
-    <p>You probably already have all the ingredients you'll need to make this rich chocolate cake. If not, here's what to put on your grocery list:</p>
-    <ul>
-        <h3>Cake</h3>
-        <p></p>
-        <li>2 cups white sugar</li>
-        <li>1 ¾ cups all-purpose flour</li>
-        <li>¾ cup unsweetened cocoa powder</li>
-        <li>1 ½ teaspoons baking soda</li>
-        <li>1 ½ teaspoons baking powder</li>
-        <li>1 teaspoon salt</li>
-        <li>2 large eggs</li>
-        <li>1 cup milk</li>
-        <li>½ cup vegetable oil</li>
-        <li>2 teaspoons vanilla extract</li>
-        <li>1 cup boiling water</li>
-        <p></p>
-        <h3>Frosting</h3>
-        <p></p>
-        <li>¾ cup unsalted butter, at room temperature</li>
-        <li>5 ⅓ cups confectioners' sugar</li>
-        <li>1 ½ cups unsweetened cocoa powder</li>
-        <li>⅔cup milk</li>
-        <li>1 teaspoon vanilla extract</li>
-    </ul>
-    <!--start of directions to making the cake-->
-    <h2>Directions</h2>
-    <!--useing the unordered list function to space the step number and the directions for readability-->
-    <ul>
-        <h3>step 1</h3>
-    </ul>
-    <p>Preheat the oven to 350 degrees F (175 degrees C). Grease and flour two 9-inch round cake pans.</p>
-    <ul>
-        <h3>step 2</h3>
-    </ul>
-    <p>Make cake: Stir together sugar, flour, cocoa, baking soda, baking powder, and salt in a bowl.</p>
-    <img src="" alt="">
-    <ul>
-        <h3>step 3</h3>
-    </ul>
-    <p>Add eggs, milk, oil, and vanilla; mix for 3 minutes with an electric mixer. Stir in boiling water by hand.</p>
-    <img src="" alt="">
-    <img src="" alt="">
-    <ul>
-        <h3>step 4</h3>
-    </ul>
-    <p>Pour evenly into the prepared pans.</p>
-    <img src="" alt="">
-    <ul>
-        <h3>step 5</h3>
-    </ul>
-    <p>Bake in the preheated oven until a toothpick inserted into the centres comes out clean, 30 to 35 minutes. Cool for 10 minutes before removing from pans to cool completely.</p>
-    <img src="" alt="">
-    <ul>
-        <h3>step 6</h3>
-    </ul>
-    <p>While cakes cool, make frosting: Cream butter with an electric mixer until light and fluffy. Stir in confectioners' sugar and cocoa alternately with milk and vanilla. Beat to a smooth spreading consistency.</p>
-    <img src="" alt="">
-    <ul>
-        <h3>step 7</h3>
-    </ul>
-    <p>Split the layers of the cooled cake horizontally, cover the top of each layer with frosting, then stack them onto a serving plate.</p>
-    <img src="" alt="">
-    <img src="" alt="">
-    <ul>
-        <h3>step 8</h3>
-    </ul>
-    <p>Frost the outside of the cake with the remaining frosting.</p>
-    <img src="" alt="">
-    <ul>
-        <h3>step 9</h3>
-    </ul>
-    <p>Enjoy!</p>
-    <img src="" alt="">
-
+    <a href="recipes/greek chicken.html"></a>
 </body>
 </html>
