creating nessasary files, starting greek baklava.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>odin recipes</h1>
-    <a href="recipes/chocolate cake.html">chocolate cake</a>
+    <a href="recipes/chocolate cake.html">Chocolate Cake</a>
     <p></p>
-    <a href="recipes/greek chicken.html"></a>
+    <a href="recipes/greek baklava.html">Greek Baklava</a>
+    <p></p>
+    <a href="recipes/marinated flank steak.html">Marinated Flank Steak</a>
 </body>
 </html>
