--- a/recipes/chocolate cake.html
+++ b/recipes/chocolate cake.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Chocolate Cake</h1>
-    <h3><a href="../index.html">odin recipes</a></h3>
+    <a href="../index.html">odin recipes</a>
     <p></p>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9441813.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="chocolate cake">
     <h3>description</h3>
