--- a/recipes/marinated flank steak.html
+++ b/recipes/marinated flank steak.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Greek chicken\</title>
+    <title>Marinated flank steak</title>
 </head>
 <body>
     
