getting started on the greek baklava

--- a/recipes/greek baklava.html
+++ b/recipes/greek baklava.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Greek chicken\</title>
+    <title>Greek chicken</title>
 </head>
 <body>
     <h1>Greek chicken</h1>
+    <img src="../img/greek baklava/main.webp" width="500" height="500" alt="a slice of baklava">
+    <h2>Description</h2>
+    <p>Greek baklava is a delicious pastry that is an integral part of Greek cuisine. It is a sweet and rich dessert that consists of layers of flaky phyllo pastry filled with a mixture of chopped nuts and spices, and soaked in a sweet syrup.</p>
 </body>
 </html>
