finished baklava, starting steak.

--- a/recipes/greek baklava.html
+++ b/recipes/greek baklava.html
@@ -7,8 +7,78 @@
 </head>
 <body>
     <h1>Greek baklava</h1>
+    <a href="../index.html">odin recipes</a>
+    <p></p>
     <img src="../img/greek baklava/main.webp" width="500" height="500" alt="a slice of baklava">
     <h2>Description</h2>
-    <p>Greek baklava is a delicious pastry that is an integral part of Greek cuisine. It is a sweet and rich dessert that consists of layers of flaky phyllo pastry filled with a mixture of chopped nuts and spices, and soaked in a sweet syrup.</p>
+    <p>Greek baklava is a delightful and indulgent pastry that originates from Greece and is renowned for its rich flavors and delicate layers. This delectable treat consists of thin sheets of phyllo dough, which are generously brushed with butter or olive oil, layered with a scrumptious mixture of finely chopped nuts, usually walnuts, almonds, or pistachios, and then sweetened with a fragrant blend of cinnamon and cloves.</p>
+
+        <p>Once the layers are stacked, the pastry is expertly cut into diamond or square shapes before being baked to a golden, flaky perfection. After baking, a sweet syrup, often infused with honey, lemon, and orange, is poured over the warm baklava, saturating each layer and creating a delectable, sticky sweetness.</p>
+        
+        <p>Greek baklava has a long history and is deeply rooted in the country's culinary tradition. It is commonly served during festive occasions, family gatherings, and celebrations, symbolizing warmth, hospitality, and the joy of sharing food with loved ones. With its exquisite blend of textures and flavors, Greek baklava is a true delicacy that leaves a lasting impression on anyone fortunate enough to savor its tempting allure.</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 (16-ounce) package of phyllo dough</li>
+            <li>1 pound chopped nuts</li>
+            <li>1 cup butter</li>
+            <li>1 teaspoon ground cinnamon</li>
+            <li>1 cup water</li>
+            <li>1 cup white sugar</li>
+            <li>1 teaspoon vanilla extract</li>
+            <li>½ cup honey</li>
+        </ul>
+        <h2>Directions</h2>
+        <ul>
+            <h3>step 1</h3>
+        </ul>
+        <p>Gather all ingredients.</p>
+        <img src="../img/greek baklava/baklava 1.webp" width="500px" height="390" alt="">
+        <ul>
+            <h3>Step 2</h3>
+        </ul>
+        <p>Preheat the oven to 350 degrees F(175 degrees C). Butter the bottoms and sides of a 9x13-inch pan.</p>
+        <ul>
+            <h3>Step 3</h3>
+        </ul>
+        <p>Chop nuts and toss with cinnamon. Set aside.</p>
+        <img src="../img/greek baklava/baklava 2.webp" width="500px" height="390" alt="">
+        <ul>
+            <h3>Step 4</h3>
+        </ul>
+        <p>Unroll phyllo dough. Cut whole stack in half to fit pan. Cover phyllo with a dampened cloth to keep from drying out as you work. Place two sheets of dough in pan, butter thoroughly. Repeat until you have 8 sheets layered.</p>
+        <img src="../img/greek baklava/baklava 3.webp" width="500px" height="390" alt="">
+        <ul>
+            <h3>Step 5</h3>
+        </ul>
+        <p>Sprinkle 2 to 3 tablespoons of nut mixture on top. Top with two sheets of dough, butter, nuts, layering as you go. The top layer should be about 6 to 8 sheets deep.</p>
+        <img src="../img/greek baklava/baklava 4.webp" width="500px" height="390" alt="">
+        <p></p>
+        <img src="../img/greek baklava/baklava 5.webp" width="500px" height="390" alt="">
+        <ul>
+            <h3>Step 6</h3>
+        </ul>
+        <p>Using a sharp knife cut into diamond or square shapes all the way to the bottom of the pan. You may cut into 4 long rows then make diagonal cuts. Bake for about 50 minutes until baklava is golden and crisp.</p>
+        <img src="../img/greek baklava/baklava 6.webp" width="500px" height="390" alt="">
+        <ul>
+            <h3>Step 7</h3>
+        </ul>
+        <p>Make sauce while baklava is baking. Boil sugar and water until sugar is melted. Add vanilla and honey. Simmer for about 20 minutes.</p>
+        <img src="../img/greek baklava/baklava 7.webp" width="500px" height="390" alt="">
+        <ul>
+            <h3>Step 8</h3>
+        </ul>
+        <p>Remove baklava from the oven and immediately spoon sauce over it. Let cool.</p>
+        <img src="../img/greek baklava/baklava 8.webp" width="500px" height="390" alt="">
+        <ul>
+            <h3>Step 9</h3>
+        </ul>
+        <p>Serve in cupcake papers. This freezes well. Leave it uncovered as it gets soggy if it is wrapped up.</p>
+        <img src="../img/greek baklava/baklava 9.webp" width="500px" height="390" alt="">
+        <ul>
+            <h3>Step 10</h3>
+        </ul>
+        <p>Enjoy!</p>
+        <img src="../img/greek baklava/baklava 10.webp" width="500px" height="390" alt="">
 </body>
 </html>
