--- a/recipes/chocolate cake.html
+++ b/recipes/chocolate cake.html
@@ -48,45 +48,45 @@
         <h3>step 2</h3>
     </ul>
     <p>Make cake: Stir together sugar, flour, cocoa, baking soda, baking powder, and salt in a bowl.</p>
-    <img src="../img/cake 1.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 1.jpg" alt="">
     <ul>
         <h3>step 3</h3>
     </ul>
     <p>Add eggs, milk, oil, and vanilla; mix for 3 minutes with an electric mixer. Stir in boiling water by hand.</p>
-    <img src="../img/cake 2.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 2.jpg" alt="">
     <p> </p>
-    <img src="../img/cake 3.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 3.jpg" alt="">
     <ul>
         <h3>step 4</h3>
     </ul>
     <p>Pour evenly into the prepared pans.</p>
-    <img src="../img/cake 4.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 4.jpg" alt="">
     <ul>
         <h3>step 5</h3>
     </ul>
     <p>Bake in the preheated oven until a toothpick inserted into the centres comes out clean, 30 to 35 minutes. Cool for 10 minutes before removing from pans to cool completely.</p>
-    <img src="../img/cake 5.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 5.jpg" alt="">
     <ul>
         <h3>step 6</h3>
     </ul>
     <p>While cakes cool, make frosting: Cream butter with an electric mixer until light and fluffy. Stir in confectioners' sugar and cocoa alternately with milk and vanilla. Beat to a smooth spreading consistency.</p>
-    <img src="../img/cake 6.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 6.jpg" alt="">
     <ul>
         <h3>step 7</h3>
     </ul>
     <p>Split the layers of the cooled cake horizontally, cover the top of each layer with frosting, then stack them onto a serving plate.</p>
-    <img src="../img/cake 7.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 7.jpg" alt="">
     <p></p>
-    <img src="../img/cake 8.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 8.jpg" alt="">
     <ul>
         <h3>step 8</h3>
     </ul>
     <p>Frost the outside of the cake with the remaining frosting.</p>
-    <img src="../img/cake 9.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 9.jpg" alt="">
     <ul>
         <h3>step 9</h3>
     </ul>
     <p>Enjoy!</p>
-    <img src="../img/cake 10.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 10.jpg" alt="">
 </body>
 </html>
