--- a/recipes/chocolate cake.html
+++ b/recipes/chocolate cake.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>Chocolate Cake</h1>
-    <a href="../index.html">odin recipes</a>
+    <a href="../index.html"><h2>odin recipes</h2></a>
     <p></p>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9441813.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="chocolate cake">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9441813.jpg&q=60&c=sc&orient=true&poi=auto&h=512" width="500" height="350" alt="chocolate cake">
     <h3>description</h3>
     <p>Chocolate cake is a moist and tender dessert made with cocoa powder, known for its rich and indulgent flavors. Layered with a luscious chocolate frosting, it creates a heavenly treat that satisfies any chocolate lover's cravings. Whether enjoyed alone or with a scoop of ice cream, chocolate cake is a timeless classic that brings joy and delight to any occasion.</p>
     <h2>ingredients</h2>
@@ -48,45 +48,45 @@
         <h3>step 2</h3>
     </ul>
     <p>Make cake: Stir together sugar, flour, cocoa, baking soda, baking powder, and salt in a bowl.</p>
-    <img src="../img/Chocolate-cake/cake 1.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 1.jpg" width="500" height="350" alt="Mixing the ingredients together and combing them.">
     <ul>
         <h3>step 3</h3>
     </ul>
     <p>Add eggs, milk, oil, and vanilla; mix for 3 minutes with an electric mixer. Stir in boiling water by hand.</p>
-    <img src="../img/Chocolate-cake/cake 2.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 2.jpg" width="500" height="350" alt="mixing different ingredients with an electric mixer turning them into a liquid.">
     <p> </p>
-    <img src="../img/Chocolate-cake/cake 3.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 3.jpg"width="500" height="350" alt="mixing the liquid ingredients with an handheld mixer.">
     <ul>
         <h3>step 4</h3>
     </ul>
     <p>Pour evenly into the prepared pans.</p>
-    <img src="../img/Chocolate-cake/cake 4.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 4.jpg" width="500" height="350" alt="liquid batter inside circal prepared pans.">
     <ul>
         <h3>step 5</h3>
     </ul>
     <p>Bake in the preheated oven until a toothpick inserted into the centres comes out clean, 30 to 35 minutes. Cool for 10 minutes before removing from pans to cool completely.</p>
-    <img src="../img/Chocolate-cake/cake 5.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 5.jpg" width="500" height="350" alt="cake in pans.">
     <ul>
         <h3>step 6</h3>
     </ul>
     <p>While cakes cool, make frosting: Cream butter with an electric mixer until light and fluffy. Stir in confectioners' sugar and cocoa alternately with milk and vanilla. Beat to a smooth spreading consistency.</p>
-    <img src="../img/Chocolate-cake/cake 6.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 6.jpg" width="500" height="350" alt="mixing ingredients to get icing.">
     <ul>
         <h3>step 7</h3>
     </ul>
     <p>Split the layers of the cooled cake horizontally, cover the top of each layer with frosting, then stack them onto a serving plate.</p>
-    <img src="../img/Chocolate-cake/cake 7.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 7.jpg" width="500" height="350" alt="cake and spreading knife on board.">
     <p></p>
-    <img src="../img/Chocolate-cake/cake 8.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 8.jpg" width="500" height="350" alt="spreading icing on cake.">
     <ul>
         <h3>step 8</h3>
     </ul>
     <p>Frost the outside of the cake with the remaining frosting.</p>
-    <img src="../img/Chocolate-cake/cake 9.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 9.jpg" width="500" height="350" alt="halfway done icing.">
     <ul>
         <h3>step 9</h3>
     </ul>
     <p>Enjoy!</p>
-    <img src="../img/Chocolate-cake/cake 10.jpg" alt="">
+    <img src="../img/Chocolate-cake/cake 10.jpg" width="500" height="350" alt="the icing is finished it is now chocolate cake.">
 </body>
 </html>
