--- a/recipes/greek baklava.html
+++ b/recipes/greek baklava.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Greek chicken</title>
+    <title>Greek Baklava</title>
 </head>
 <body>
     <h1>Greek baklava</h1>
-    <a href="../index.html">odin recipes</a>
+    <a href="../index.html"><h2>odin recipes</h2></a>
     <p></p>
     <img src="../img/greek baklava/main.webp" width="500" height="500" alt="a slice of baklava">
     <h2>Description</h2>
@@ -33,7 +33,7 @@
             <h3>step 1</h3>
         </ul>
         <p>Gather all ingredients.</p>
-        <img src="../img/greek baklava/baklava 1.webp" width="500px" height="390" alt="">
+        <img src="../img/greek baklava/baklava 1.webp" width="500" height="350" alt="All the ingredients.">
         <ul>
             <h3>Step 2</h3>
         </ul>
@@ -42,43 +42,43 @@
             <h3>Step 3</h3>
         </ul>
         <p>Chop nuts and toss with cinnamon. Set aside.</p>
-        <img src="../img/greek baklava/baklava 2.webp" width="500px" height="390" alt="">
+        <img src="../img/greek baklava/baklava 2.webp" width="500" height="350" alt="mixing the ingredients.">
         <ul>
             <h3>Step 4</h3>
         </ul>
         <p>Unroll phyllo dough. Cut whole stack in half to fit pan. Cover phyllo with a dampened cloth to keep from drying out as you work. Place two sheets of dough in pan, butter thoroughly. Repeat until you have 8 sheets layered.</p>
-        <img src="../img/greek baklava/baklava 3.webp" width="500px" height="390" alt="">
+        <img src="../img/greek baklava/baklava 3.webp" width="500" height="350" alt="spreading butter on phyllo dough">
         <ul>
             <h3>Step 5</h3>
         </ul>
         <p>Sprinkle 2 to 3 tablespoons of nut mixture on top. Top with two sheets of dough, butter, nuts, layering as you go. The top layer should be about 6 to 8 sheets deep.</p>
-        <img src="../img/greek baklava/baklava 4.webp" width="500px" height="390" alt="">
+        <img src="../img/greek baklava/baklava 4.webp" width="500" height="350" alt="Sprinkling nut mixture over phyllo dough">
         <p></p>
-        <img src="../img/greek baklava/baklava 5.webp" width="500px" height="390" alt="">
+        <img src="../img/greek baklava/baklava 5.webp" width="500" height="350" alt="covering the nut mixturewith phyllo dough">
         <ul>
             <h3>Step 6</h3>
         </ul>
         <p>Using a sharp knife cut into diamond or square shapes all the way to the bottom of the pan. You may cut into 4 long rows then make diagonal cuts. Bake for about 50 minutes until baklava is golden and crisp.</p>
-        <img src="../img/greek baklava/baklava 6.webp" width="500px" height="390" alt="">
+        <img src="../img/greek baklava/baklava 6.webp" width="500" height="350" alt="cutting into squares.">
         <ul>
             <h3>Step 7</h3>
         </ul>
         <p>Make sauce while baklava is baking. Boil sugar and water until sugar is melted. Add vanilla and honey. Simmer for about 20 minutes.</p>
-        <img src="../img/greek baklava/baklava 7.webp" width="500px" height="390" alt="">
+        <img src="../img/greek baklava/baklava 7.webp" width="500" height="350" alt="cooking on stove.">
         <ul>
             <h3>Step 8</h3>
         </ul>
         <p>Remove baklava from the oven and immediately spoon sauce over it. Let cool.</p>
-        <img src="../img/greek baklava/baklava 8.webp" width="500px" height="390" alt="">
+        <img src="../img/greek baklava/baklava 8.webp" width="500" height="350" alt="spreading sauce over the baklava.">
         <ul>
             <h3>Step 9</h3>
         </ul>
         <p>Serve in cupcake papers. This freezes well. Leave it uncovered as it gets soggy if it is wrapped up.</p>
-        <img src="../img/greek baklava/baklava 9.webp" width="500px" height="390" alt="">
+        <img src="../img/greek baklava/baklava 9.webp" width="500" height="350" alt="the baklava is shown from above.">
         <ul>
             <h3>Step 10</h3>
         </ul>
         <p>Enjoy!</p>
-        <img src="../img/greek baklava/baklava 10.webp" width="500px" height="390" alt="">
+        <img src="../img/greek baklava/baklava 10.webp" width="500" height="350" alt="the baklava is presented before you.">
 </body>
 </html>
